--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 }
 dependencies {
     //testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'mysql:mysql-connector-java:8.0.33'
     //testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
@@ -27,6 +27,6 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'chromeoptions.prefs', System.getProperty('chromeoptions.prefs', "profile.password_manager_leak_detection=false")
-    systemProperty 'app.url', System.getProperty('app.url', "jdbc.url=jdbc:mysql://localhost:3306/app")
+    systemProperty 'app.url', System.getProperty('app.url', "jdbc:mysql://localhost:3306/app")
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
