--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
 
     ports:
       - '3306:3306'
-      -
+
     volumes:
-      - ./data:/docker-entrypoint-initdb.db
+      - ./data:/docker-entrypoint-initdb.d
 
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_DATABASE=app
       - MYSQL_USER=app
-      - MYSQL_PASSWORD=pass
+      - MYSQL_PAS SWORD=pass
